[ADD] Konten Home

--- a/app/globals.css
+++ b/app/globals.css
@@ -66,7 +66,7 @@ html{
 }
 
 .hero-img {
-  background-image: url("https://i.postimg.cc/qq6wsk9V/test.jpg");
+  background-image: url("https://i.ibb.co.com/mqNWzn7/her-3.jpg");
   background-position: 90% center; /* Mengambil bagian ujung kanan gambar */
   background-repeat: no-repeat;
   background-size: cover;
