--- a/app/globals.css
+++ b/app/globals.css
@@ -23,7 +23,7 @@ html{
 
 
 .bg-hero {
-  background-image: url("https://i.ibb.co/cyLSF4d/ki-10.jpg");
+  background-image: url("https://i.ibb.co.com/M8Jsg4f/1694048231405-t.jpg");
   background-position:50% center;
   background-repeat: no-repeat;
   background-size: cover;
